# RL_VLA_Bootstrapping

./: .gitignore  COLLABORATOR_SETUP.md  README.md  pyproject.toml
assets/: README.md
benchmarks/: README.md
cdpr_dataset/: rl_instruction_tasks.py  synthetic_tasks.py
cdpr_dataset/datasets/: cdpr_scene_catalog.yaml
cdpr_mujoco/: __init__.py  cdpr_scene_switcher.py
configs/examples/: cdpr_openvla_blac_in_tree.yaml  cdpr_openvla_bootstrap.yaml  cdpr_openvla_bootstrap_fast.yaml  cdpr_openvla_bootstrap_fast_resume_120_to_180.yaml  cdpr_openvla_bootstrap_fast_resume_180_to_280.yaml  cdpr_openvla_bootstrap_fast_resume_280_to_380.yaml
environments/: openvla-oft-remote.yaml
rl_vla_bootstrapping/: __init__.py  assets.py
rl_vla_bootstrapping/cli/: assets.py  diagnose_cdpr_policy.py  doctor.py  preview.py  run_cdpr_policy.py  train.py  validate_cdpr_policy.py
robots/: README.md  __init__.py
robots/cdpr/: README.md  (+1 more)
scripts/: doctor_bootstrap.sh  preview_bootstrap.sh  setup_remote.sh  train_bootstrap.sh
tests/: README.md  test_blac_finetune_cdpr.py  test_cdpr_env_hold_steps.py  test_cdpr_headless_controller.py  test_cdpr_instruction_goals.py  test_cdpr_instruction_tasks.py  test_cdpr_policy_control.py  test_cdpr_policy_diagnostics.py  test_cdpr_policy_runner.py  test_cdpr_reward.py  test_cdpr_scene_sampling.py  test_cdpr_video_timing.py  test_cdpr_workspace_safety.py  test_cdpr_wrapper_bundle.py  test_imports.py  test_openvla_actor_critic.py  test_openvla_blac_finetune_cdpr.py  test_pipeline.py  test_ppo_finetune_cdpr_fast.py  test_validate_cdpr_policy.py
(+37 files in other folders)
